[project]
name = "learning-tool"
version = "0.1.0"
description = "CLI learning companion with optional LLM-assisted questions."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[tool.ruff]
line-length = 88
target-version = "py311"
