[project]
name = "learning-tool"
version = "0.1.0"
description = "CLI learning companion with optional LLM-assisted questions."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["learning_tool", "tests"]

[tool.ruff.lint]
# E,F: style & basic errors; B: bugbear; I: import sorting
select = ["E", "F", "B", "I"]
# Optional: ignore long-line warnings if you prefer
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

# Start relatively relaxed and tighten later if you want.
disallow_untyped_defs = false
disallow_incomplete_defs = false

# The openai package ships with type hints, but to keep things simple we
# ignore missing stubs for any 3rd-party libs.
ignore_missing_imports = true

# Use explicit package bases so mypy knows that "learning_tool" is the root
# package, and doesn't also treat files as top-level modules.
explicit_package_bases = true

# Only check our code + tests
files = ["learning_tool", "tests"]
